# julie-vic-wedding-backend

./: .editorconfig  .env.example  .gitignore  Architecture.mdj  Cargo.toml  Makefile  README.md  build.sh  build_in_github.sh
.github/workflows/: build.yml  publish.yml  pull_request.yml  release.yml
julie-vic-wedding-api/: .env.example  Cargo.toml  README.md
julie-vic-wedding-api/src/: db.rs  main.rs  utils.rs
julie-vic-wedding-api/src/auth/: error.rs  facebook.rs  google.rs  mod.rs  token.rs  traits.rs
julie-vic-wedding-api/src/conduit/: tokens.rs  users.rs
julie-vic-wedding-api/src/handlers/: mod.rs  users.rs  utils.rs
julie-vic-wedding-api/src/handlers/auth/: facebook.rs  google.rs  invite_token.rs  mod.rs
julie-vic-wedding-api/src/middlewares/: cors.rs  mod.rs  rsvp.rs
julie-vic-wedding-cli/: .env.example  Cargo.toml  README.md
julie-vic-wedding-cli/src/: db.rs  main.rs
julie-vic-wedding-cli/src/commands/: emails.rs  mod.rs  tokens.rs
julie-vic-wedding-cli/templates/: invitation-en.html
julie-vic-wedding-core/: Cargo.toml  README.md
julie-vic-wedding-core/migrations/2020-01-17-123649_create_tables/: up.sql
julie-vic-wedding-core/migrations/2020-03-01-181617_registration_tokens/: down.sql  up.sql
julie-vic-wedding-core/migrations/2020-03-13-155714_user_language/: down.sql  up.sql
julie-vic-wedding-core/src/: attend_status_type.rs  available_language_type.rs  lib.rs  models.rs  schema.rs
julie-vic-wedding-core/src/auth/: mod.rs  traits.rs
migrations/2020-01-17-123649_create_tables/: down.sql  up.sql
scripts/: build.sh
src/: api.rs  attend_status_type.rs  db.rs  main.rs  models.rs  schema.rs  users.rs
src/auth/: facebook.rs  google.rs  mod.rs  profile.rs  token.rs  traits.rs
src/conduit/: users.rs
src/handlers/: mod.rs  users.rs
src/handlers/auth/: facebook.rs  google.rs
src/middlewares/: mod.rs  rsvp.rs
