[package]
name = "julie-vic-wedding-backend"
version = "0.1.0"
authors = ["Victor Quiroz Castro <victorhqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono", "extras"] }
dotenv = "0.15"
futures = "0.1"
gotham = "0.3"
gotham_derive = "0.3"
http = "0.1"
hyper = "0.12"
mime = "0.3"
oauth2 = "2.0"
r2d2 = "0.8"
reqwest = { version = "0.9" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
uuid = { version = "0.6", features = ["serde", "v4"] }
