[package]
name = "julie-vic-wedding-api"
version = "0.4.0"
authors = ["Victor Quiroz Castro <victorhqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "extras"] }
dotenv = "0.15"
env_logger = "0.6.0"
futures = "0.1"
gotham = "0.4"
gotham_derive = "0.4"
gotham_middleware_diesel = "0.1.0"
gotham_middleware_jwt = "0.3.3"
http = "0.1"
hyper = "0.12"
julie-vic-wedding-core = { path = "../julie-vic-wedding-core" }
jsonwebtoken = "6.0"
log = "0.4"
mime = "0.3"
oauth2 = "2.0"
r2d2 = "0.8"
reqwest = { version = "0.9" }
thiserror = "1.0.11"
tokio = "0.1.17"
tokio-threadpool = "0.1.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
uuid = { version = "0.6", features = ["serde", "v4"] }
openssl-probe = "0.1.2"
openssl = "*"
