[package]
name = "julie-vic-wedding-cli"
version = "0.4.0"
authors = ["Victor Quiroz Castro <victorhqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
askama = "0.9.0"
chrono = { version = "0.4", features = ["serde"]}
clap = "2.33.0"
diesel = { version = "1.4", features = ["postgres", "chrono", "extras"] }
dotenv = "0.15"
env_logger = "0.6.0"
futures = "0.1"
hyper = "0.12"
julie-vic-wedding-core = { path = "../julie-vic-wedding-core" }
log = "0.4"
native-tls = "0.2.3"
rand = "0.7.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
thiserror = "1.0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
openssl-probe = "0.1.2"
openssl = "*"
