[package]
name = "julie-vic-wedding-core"
version = "0.4.0"
authors = ["Victor Quiroz Castro <victorhqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "extras"] }
dotenv = "0.15"
env_logger = "0.6.0"
futures = "0.1"
http = "0.1"
hyper = "0.12"
log = "0.4"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
openssl = "*"
